--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
-Flask==3.0.2
-pandas==2.2.3
-numpy==2.1.3
-scipy==1.14.1
-matplotlib==3.9.2
-openpyxl==3.1.5
+Flask
+pandas
+numpy
+scipy
+matplotlib
+openpyxl
+python-dotenv
+google-generativeai
+scikit-learn
